--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html body {
+  margin: 0;
+}
+
+/* 
 a {
   font-weight: 500;
   color: #646cff;
@@ -20,21 +25,31 @@ a {
 }
 a:hover {
   color: #535bf2;
-}
+} */
+/* 
+html {
+  width: 100vw;
+} */
 
-body {
-  margin: 0;
+
+.body {
+  /* padding: 15px; */
+  /* margin: 0; */
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: ; */
+  height: 91vh;
+  /* min-height: 70vh; */
+  /* min-width: 320px;
+  min-height: 100vh; */
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 2.2em;
   line-height: 1.1;
 }
-
+/* 
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -52,7 +67,7 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
+} */
 
 @media (prefers-color-scheme: light) {
   :root {
