--- a/src/RevisionControl/revision.css
+++ b/src/RevisionControl/revision.css
@@ -1,3 +1,40 @@
 .revision-parent {
-    padding: 15px;
+  padding: 15px;
+}
+
+.revision_container {
+  width: 65vw;
+  max-width: 900px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.rev_text {
+  width: 90%;
+  margin: 0;
+  padding: 0;
+}
+
+.revision_character_list {
+  margin-top: auto;
+  margin-bottom: auto;
+  padding: 0;
+  min-width: 75px;
+  width: 10%;
+  list-style: none;
+  text-align: center;
+}
+
+.revision {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  width: 65vw;
+  max-width: 900px;
+  padding: 10px;
+}
+
+.empty {
+  text-align: center;
 }
