Enabled About page

--- a/src/NavigationBar/NavigationBar.css
+++ b/src/NavigationBar/NavigationBar.css
@@ -12,9 +12,13 @@
   width: 50px;
 }
 
-#logo {
+.navigation_button {
   all: unset;
   cursor: pointer;
+}
+
+.sub-important {
+  font-size: 1.25rem;
 }
 
 #header {
