--- a/src/Editor/editor.css
+++ b/src/Editor/editor.css
@@ -7,13 +7,14 @@
   height: 45vh;
 }
 
+footer {
+  display: flex;
+}
+
 .editorBox {
   padding: 0;
   width: 45vw;
   height: inherit;
-}
-
-.input {
 }
 
 .output {
