--- a/src/Components/SidePanel/SidePanel.css
+++ b/src/Components/SidePanel/SidePanel.css
@@ -12,5 +12,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 10px;
+  float: right;
+  position: fixed;
+  right: 0;
+  /* padding: 10px; */
 }
